// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  autoComplete="off"
  noValidate={true}
>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form
    </h2>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiFormLabel-required-80 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
        data-shrink={true}
        htmlFor="text"
      >
        Text Field
        <span
          className="MuiFormLabel-asterisk-81"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90"
          disabled={false}
          id="text"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          rows={1}
          type="text"
          value="prefilled text-field"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-required-80 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="select"
      >
        Select
        <span
          className="MuiFormLabel-asterisk-81"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <div
          className="MuiSelect-root-95"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-96 MuiSelect-selectMenu-97 MuiInput-input-90"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            id="select"
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 MuiSelect-icon-99"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
        data-shrink={true}
        htmlFor="number"
      >
        Number
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="number"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="number"
          value={10}
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthFull-65"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="multiline"
      >
        Multiline
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-multiline-88 MuiInput-underline-86"
      >
        <textarea
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputMultiline-92"
          disabled={false}
          id="multiline"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={5}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthMid-64 FormFieldListBranch-root-111"
    >
      <div
        className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
          data-shrink={false}
          htmlFor="list"
        >
          List
        </label>
        <div
          className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
        >
          <input
            aria-invalid={false}
            className="MuiInput-input-90"
            disabled={false}
            id="list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-112"
      >
        <ul
          className="MuiList-root-115 MuiList-padding-116"
        />
      </div>
      <div>
        Array [
          <div
            aria-describedby={null}
            className="MuiChip-root-126 MuiChip-deletable-132"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
            title="Foo-Baz"
          >
            <span
              className="MuiChip-label-142"
            >
              Foo
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-100 MuiChip-deleteIcon-143"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          "",
        ]
        <div
          className="MuiChip-root-126 MuiChip-deletable-132 FormFieldListBranch-selectedItem-114"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="MuiChip-label-142"
          >
            Bar
          </span>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 MuiChip-deleteIcon-143"
            focusable="false"
            onClick={[Function]}
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </div>
        Array [
          <div
            aria-describedby={null}
            className="MuiChip-root-126 MuiChip-deletable-132"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
            title="Foo-Baz"
          >
            <span
              className="MuiChip-label-142"
            >
              Baz
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-100 MuiChip-deleteIcon-143"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          "",
        ]
      </div>
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthMid-64 FormFieldListBranch-root-111"
    >
      <div
        className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
          data-shrink={false}
          htmlFor="free-list"
        >
          Free List
        </label>
        <div
          className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
        >
          <input
            aria-invalid={false}
            className="MuiInput-input-90"
            disabled={false}
            id="free-list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-112"
      >
        <ul
          className="MuiList-root-115 MuiList-padding-116"
        />
      </div>
      <div />
    </div>
    <div
      className="FormGroupWrapper-groupIntegrated-4"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 FormBranch-title-1"
      >
        Nested Form
      </h3>
      <div
        className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
          data-shrink={false}
          htmlFor="nested-text"
        >
          Nested Text
        </label>
        <div
          className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
        >
          <input
            aria-invalid={false}
            className="MuiInput-input-90"
            disabled={false}
            id="nested-text"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={1}
            type="text"
            value=""
          />
          <div
            className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-100"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      />
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthFull-65 FormFieldBranch-field-60"
    >
      <h1
        className="MuiTypography-root-33 MuiTypography-headline-38"
      >
        Content
      </h1>
      <hr
        className="MuiDivider-root-151"
      />
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby="url-helper-text"
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="url"
      >
        URL
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="url"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="url"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-155"
        id="url-helper-text"
      >
        Should be URL with trailing slash
      </p>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="empty"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Date
    </h2>
    <ForwardRef
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
      clearable={true}
      format="DD.MM.YYYY"
      helperText=""
      id="date"
      keyboard={true}
      keyboardIcon={<pure(EventIcon) />}
      label="Date"
      leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
      onChange={[Function]}
      required={false}
      rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
      value="2018-01-03T14:28:02.669Z"
    >
      Array [
        <div
          className="MuiFormControl-root-66 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
          onClick={[Function]}
          onKeyPress={[Function]}
        >
          <label
            className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
            data-shrink={true}
            htmlFor="date"
          >
            Date
          </label>
          <div
            className="MuiInput-root-82 MuiInput-formControl-83 MuiInput-underline-86 WithUtils-DateTextField--input-162"
          >
            <input
              aria-invalid={false}
              className="MuiInput-input-90"
              disabled={false}
              id="date"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="03.01.2018"
            />
            <div
              className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
            >
              <button
                className="MuiButtonBase-root-169 MuiIconButton-root-163"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-168"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-172"
                  >
                     
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                     
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-179"
                />
              </button>
            </div>
          </div>
        </div>,
        "",
      ]
    </ForwardRef>
    <ForwardRef
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
      clearable={true}
      format="hh:mm a"
      helperText=""
      id="time"
      keyboard={true}
      keyboardIcon={<pure(EventIcon) />}
      label="Time"
      onChange={[Function]}
      required={false}
      value="2018-01-03T14:28:02.669Z"
    >
      Array [
        <div
          className="MuiFormControl-root-66 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
          onClick={[Function]}
          onKeyPress={[Function]}
        >
          <label
            className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
            data-shrink={true}
            htmlFor="time"
          >
            Time
          </label>
          <div
            className="MuiInput-root-82 MuiInput-formControl-83 MuiInput-underline-86 WithUtils-DateTextField--input-162"
          >
            <input
              aria-invalid={false}
              className="MuiInput-input-90"
              disabled={false}
              id="time"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="03:28 pm"
            />
            <div
              className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
            >
              <button
                className="MuiButtonBase-root-169 MuiIconButton-root-163"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-168"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-172"
                  >
                     
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                     
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-179"
                />
              </button>
            </div>
          </div>
        </div>,
        "",
      ]
    </ForwardRef>
    <ForwardRef
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
      clearable={true}
      dateRangeIcon={<pure(DateRangeIcon) />}
      format="DD.MM.YYYY, hh:mm a"
      helperText=""
      id="datetime"
      keyboard={true}
      keyboardIcon={<pure(EventIcon) />}
      label="Datetime"
      leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
      onChange={[Function]}
      required={false}
      rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
      timeIcon={<pure(AccessTimeIcon) />}
      value="2018-01-03T14:28:02.669Z"
    >
      Array [
        <div
          className="MuiFormControl-root-66 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
          onClick={[Function]}
          onKeyPress={[Function]}
        >
          <label
            className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
            data-shrink={true}
            htmlFor="datetime"
          >
            Datetime
          </label>
          <div
            className="MuiInput-root-82 MuiInput-formControl-83 MuiInput-underline-86 WithUtils-DateTextField--input-162"
          >
            <input
              aria-invalid={false}
              className="MuiInput-input-90"
              disabled={false}
              id="datetime"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="03.01.2018, 03:28 pm"
            />
            <div
              className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
            >
              <button
                className="MuiButtonBase-root-169 MuiIconButton-root-163"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-168"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-172"
                  >
                     
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                     
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-179"
                />
              </button>
            </div>
          </div>
        </div>,
        "",
      ]
    </ForwardRef>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Disabled fields
    </h2>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-disabled-77 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="disabled"
      >
        Disabled Text
      </label>
      <div
        className="MuiInput-root-82 MuiInput-disabled-85 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-disabled-85"
          disabled={true}
          id="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-disabled-77 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="disabled-select"
      >
        Disabled Select
      </label>
      <div
        className="MuiInput-root-82 MuiInput-disabled-85 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <div
          className="MuiSelect-root-95"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-96 MuiSelect-selectMenu-97 MuiSelect-disabled-98 MuiInput-input-90 MuiInput-disabled-85"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            id="disabled-select"
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 MuiSelect-icon-99"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Switches, Radio Buttons and Checkboxes
    </h2>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldInline-61"
    >
      <label
        className="MuiFormControlLabel-root-205"
      >
        <span
          className="MuiSwitch-root-209"
        >
          <span
            className="MuiButtonBase-root-169 MuiIconButton-root-163 MuiSwitchBase-root-218 MuiSwitch-switchBase-212 MuiSwitch-colorPrimary-214"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-168"
            >
              <span
                className="MuiSwitch-icon-210"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-221"
                disabled={false}
                onChange={[Function]}
                type="checkbox"
                value="switch"
              />
            </span>
            <span
              className="MuiTouchRipple-root-179"
            />
          </span>
          <span
            className="MuiSwitch-bar-217"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-208"
        >
          Switch
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-155"
      >
        Display Helper Text
      </p>
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldInline-61"
    >
      <label
        className="MuiFormControlLabel-root-205 MuiFormControlLabel-disabled-207"
      >
        <span
          className="MuiSwitch-root-209"
        >
          <span
            className="MuiButtonBase-root-169 MuiButtonBase-disabled-170 MuiIconButton-root-163 MuiIconButton-disabled-167 MuiSwitchBase-root-218 MuiSwitch-switchBase-212 MuiSwitch-colorPrimary-214 MuiSwitchBase-disabled-220 MuiSwitch-disabled-216"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
          >
            <span
              className="MuiIconButton-label-168"
            >
              <span
                className="MuiSwitch-icon-210"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-221"
                disabled={true}
                onChange={[Function]}
                type="checkbox"
                value="switch-1"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-bar-217"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-208 MuiFormControlLabel-disabled-207"
        >
          Switch - Disabled
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-155 MuiFormHelperText-disabled-157"
      >
        Display Helper Text
      </p>
    </div>
  </div>
  <div
    className="FormSubmitButton-root-222"
  >
    <button
      className="MuiButtonBase-root-169 MuiButton-root-226 MuiButton-contained-237 MuiButton-containedSecondary-239 MuiButton-raised-240 MuiButton-raisedSecondary-242 FormSubmitButton-button-224"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-227"
      >
        Save
      </span>
      <span
        className="MuiTouchRipple-root-179"
      />
    </button>
  </div>
</form>
`;

exports[`renders correctly with content 1`] = `
<form
  autoComplete="off"
  noValidate={true}
>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form
    </h2>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiFormLabel-required-80 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
        data-shrink={true}
        htmlFor="text"
      >
        Text Field
        <span
          className="MuiFormLabel-asterisk-81"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90"
          disabled={false}
          id="text"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          rows={1}
          type="text"
          value="prefilled text-field"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-required-80 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="select"
      >
        Select
        <span
          className="MuiFormLabel-asterisk-81"
        >
           *
        </span>
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <div
          className="MuiSelect-root-95"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-96 MuiSelect-selectMenu-97 MuiInput-input-90"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            id="select"
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 MuiSelect-icon-99"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
        data-shrink={true}
        htmlFor="number"
      >
        Number
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="number"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="number"
          value={10}
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthFull-65"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="multiline"
      >
        Multiline
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-multiline-88 MuiInput-underline-86"
      >
        <textarea
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputMultiline-92"
          disabled={false}
          id="multiline"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={5}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthMid-64 FormFieldListBranch-root-111"
    >
      <div
        className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
          data-shrink={false}
          htmlFor="list"
        >
          List
        </label>
        <div
          className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
        >
          <input
            aria-invalid={false}
            className="MuiInput-input-90"
            disabled={false}
            id="list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-112"
      >
        <ul
          className="MuiList-root-115 MuiList-padding-116"
        />
      </div>
      <div>
        Array [
          <div
            aria-describedby={null}
            className="MuiChip-root-126 MuiChip-deletable-132"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
            title="Foo-Baz"
          >
            <span
              className="MuiChip-label-142"
            >
              Foo
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-100 MuiChip-deleteIcon-143"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          "",
        ]
        <div
          className="MuiChip-root-126 MuiChip-deletable-132 FormFieldListBranch-selectedItem-114"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="MuiChip-label-142"
          >
            Bar
          </span>
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 MuiChip-deleteIcon-143"
            focusable="false"
            onClick={[Function]}
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </div>
        Array [
          <div
            aria-describedby={null}
            className="MuiChip-root-126 MuiChip-deletable-132"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
            title="Foo-Baz"
          >
            <span
              className="MuiChip-label-142"
            >
              Baz
            </span>
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-100 MuiChip-deleteIcon-143"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>,
          "",
        ]
      </div>
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthMid-64 FormFieldListBranch-root-111"
    >
      <div
        className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
          data-shrink={false}
          htmlFor="free-list"
        >
          Free List
        </label>
        <div
          className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
        >
          <input
            aria-invalid={false}
            className="MuiInput-input-90"
            disabled={false}
            id="free-list"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={1}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormFieldListBranch-list-112"
      >
        <ul
          className="MuiList-root-115 MuiList-padding-116"
        />
      </div>
      <div />
    </div>
    <div
      className="FormGroupWrapper-groupIntegrated-4"
    >
      <h3
        className="MuiTypography-root-33 MuiTypography-subheading-40 FormBranch-title-1"
      >
        Nested Form
      </h3>
      <div
        className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
          data-shrink={false}
          htmlFor="nested-text"
        >
          Nested Text
        </label>
        <div
          className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
        >
          <input
            aria-invalid={false}
            className="MuiInput-input-90"
            disabled={false}
            id="nested-text"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={1}
            type="text"
            value=""
          />
          <div
            className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-100"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      />
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthFull-65 FormFieldBranch-field-60"
    >
      <h1
        className="MuiTypography-root-33 MuiTypography-headline-38"
      >
        Content
      </h1>
      <hr
        className="MuiDivider-root-151"
      />
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="email"
      >
        Email
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby="url-helper-text"
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="url"
      >
        URL
      </label>
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="url"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="url"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root-155"
        id="url-helper-text"
      >
        Should be URL with trailing slash
      </p>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <div
        className="MuiInput-root-82 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-inputType-93"
          disabled={false}
          id="empty"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="email"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Date
    </h2>
    <ForwardRef
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
      clearable={true}
      format="DD.MM.YYYY"
      helperText=""
      id="date"
      keyboard={true}
      keyboardIcon={<pure(EventIcon) />}
      label="Date"
      leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
      onChange={[Function]}
      required={false}
      rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
      value="2018-01-03T14:28:02.669Z"
    >
      Array [
        <div
          className="MuiFormControl-root-66 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
          onClick={[Function]}
          onKeyPress={[Function]}
        >
          <label
            className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
            data-shrink={true}
            htmlFor="date"
          >
            Date
          </label>
          <div
            className="MuiInput-root-82 MuiInput-formControl-83 MuiInput-underline-86 WithUtils-DateTextField--input-162"
          >
            <input
              aria-invalid={false}
              className="MuiInput-input-90"
              disabled={false}
              id="date"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="03.01.2018"
            />
            <div
              className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
            >
              <button
                className="MuiButtonBase-root-169 MuiIconButton-root-163"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-168"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-172"
                  >
                     
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                     
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-179"
                />
              </button>
            </div>
          </div>
        </div>,
        "",
      ]
    </ForwardRef>
    <ForwardRef
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
      clearable={true}
      format="hh:mm a"
      helperText=""
      id="time"
      keyboard={true}
      keyboardIcon={<pure(EventIcon) />}
      label="Time"
      onChange={[Function]}
      required={false}
      value="2018-01-03T14:28:02.669Z"
    >
      Array [
        <div
          className="MuiFormControl-root-66 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
          onClick={[Function]}
          onKeyPress={[Function]}
        >
          <label
            className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
            data-shrink={true}
            htmlFor="time"
          >
            Time
          </label>
          <div
            className="MuiInput-root-82 MuiInput-formControl-83 MuiInput-underline-86 WithUtils-DateTextField--input-162"
          >
            <input
              aria-invalid={false}
              className="MuiInput-input-90"
              disabled={false}
              id="time"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="03:28 pm"
            />
            <div
              className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
            >
              <button
                className="MuiButtonBase-root-169 MuiIconButton-root-163"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-168"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-172"
                  >
                     
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                     
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-179"
                />
              </button>
            </div>
          </div>
        </div>,
        "",
      ]
    </ForwardRef>
    <ForwardRef
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
      clearable={true}
      dateRangeIcon={<pure(DateRangeIcon) />}
      format="DD.MM.YYYY, hh:mm a"
      helperText=""
      id="datetime"
      keyboard={true}
      keyboardIcon={<pure(EventIcon) />}
      label="Datetime"
      leftArrowIcon={<pure(KeyboardArrowLeftIcon) />}
      onChange={[Function]}
      required={false}
      rightArrowIcon={<pure(KeyboardArrowRightIcon) />}
      timeIcon={<pure(AccessTimeIcon) />}
      value="2018-01-03T14:28:02.669Z"
    >
      Array [
        <div
          className="MuiFormControl-root-66 FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldDate-62"
          onClick={[Function]}
          onKeyPress={[Function]}
        >
          <label
            className="MuiFormLabel-root-75 MuiFormLabel-filled-79 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74 MuiInputLabel-shrink-73"
            data-shrink={true}
            htmlFor="datetime"
          >
            Datetime
          </label>
          <div
            className="MuiInput-root-82 MuiInput-formControl-83 MuiInput-underline-86 WithUtils-DateTextField--input-162"
          >
            <input
              aria-invalid={false}
              className="MuiInput-input-90"
              disabled={false}
              id="datetime"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
              value="03.01.2018, 03:28 pm"
            />
            <div
              className="MuiInputAdornment-root-148 MuiInputAdornment-positionEnd-150"
            >
              <button
                className="MuiButtonBase-root-169 MuiIconButton-root-163"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-168"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-172"
                  >
                     
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-100"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </svg>
                     
                  </span>
                </span>
                <span
                  className="MuiTouchRipple-root-179"
                />
              </button>
            </div>
          </div>
        </div>,
        "",
      ]
    </ForwardRef>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Disabled fields
    </h2>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-disabled-77 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="disabled"
      >
        Disabled Text
      </label>
      <div
        className="MuiInput-root-82 MuiInput-disabled-85 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <input
          aria-invalid={false}
          className="MuiInput-input-90 MuiInput-disabled-85"
          disabled={true}
          id="disabled"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows={1}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-66 MuiFormControl-marginNormal-67 MuiFormControl-fullWidth-69 FormFieldBranch-field-60 FormFieldBranch-widthMid-64"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-75 MuiFormLabel-disabled-77 MuiInputLabel-root-70 MuiInputLabel-formControl-71 MuiInputLabel-animated-74"
        data-shrink={false}
        htmlFor="disabled-select"
      >
        Disabled Select
      </label>
      <div
        className="MuiInput-root-82 MuiInput-disabled-85 MuiInput-fullWidth-89 MuiInput-formControl-83 MuiInput-underline-86"
      >
        <div
          className="MuiSelect-root-95"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-96 MuiSelect-selectMenu-97 MuiSelect-disabled-98 MuiInput-input-90 MuiInput-disabled-85"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            id="disabled-select"
            rows={1}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-100 MuiSelect-icon-99"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 FormGroupWrapper-group-3"
  >
    <h2
      className="MuiTypography-root-33 MuiTypography-title-39 FormBranch-title-1"
    >
      Form - Switches, Radio Buttons and Checkboxes
    </h2>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldInline-61"
    >
      <label
        className="MuiFormControlLabel-root-205"
      >
        <span
          className="MuiSwitch-root-209"
        >
          <span
            className="MuiButtonBase-root-169 MuiIconButton-root-163 MuiSwitchBase-root-218 MuiSwitch-switchBase-212 MuiSwitch-colorPrimary-214"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-168"
            >
              <span
                className="MuiSwitch-icon-210"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-221"
                disabled={false}
                onChange={[Function]}
                type="checkbox"
                value="switch"
              />
            </span>
            <span
              className="MuiTouchRipple-root-179"
            />
          </span>
          <span
            className="MuiSwitch-bar-217"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-208"
        >
          Switch
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-155"
      >
        Display Helper Text
      </p>
    </div>
    <div
      className="FormFieldBranch-field-60 FormFieldBranch-widthSmall-63 FormFieldBranch-fieldInline-61"
    >
      <label
        className="MuiFormControlLabel-root-205 MuiFormControlLabel-disabled-207"
      >
        <span
          className="MuiSwitch-root-209"
        >
          <span
            className="MuiButtonBase-root-169 MuiButtonBase-disabled-170 MuiIconButton-root-163 MuiIconButton-disabled-167 MuiSwitchBase-root-218 MuiSwitch-switchBase-212 MuiSwitch-colorPrimary-214 MuiSwitchBase-disabled-220 MuiSwitch-disabled-216"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
          >
            <span
              className="MuiIconButton-label-168"
            >
              <span
                className="MuiSwitch-icon-210"
              />
              <input
                checked={false}
                className="MuiSwitchBase-input-221"
                disabled={true}
                onChange={[Function]}
                type="checkbox"
                value="switch-1"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-bar-217"
          />
        </span>
        <span
          className="MuiTypography-root-33 MuiTypography-body1-42 MuiFormControlLabel-label-208 MuiFormControlLabel-disabled-207"
        >
          Switch - Disabled
        </span>
      </label>
      <p
        className="MuiFormHelperText-root-155 MuiFormHelperText-disabled-157"
      >
        Display Helper Text
      </p>
    </div>
  </div>
  <p>
    Foo
  </p>
  <div
    className="FormSubmitButton-root-222"
  >
    <button
      className="MuiButtonBase-root-169 MuiButton-root-226 MuiButton-contained-237 MuiButton-containedSecondary-239 MuiButton-raised-240 MuiButton-raisedSecondary-242 FormSubmitButton-button-224"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-227"
      >
        Save the form
      </span>
      <span
        className="MuiTouchRipple-root-179"
      />
    </button>
  </div>
</form>
`;
